WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134459
[iOS WK2] Don't crash on status bar tap with overflow scroll views
https://bugs.webkit.org/show_bug.cgi?id=134459
Summary
[iOS WK2] Don't crash on status bar tap with overflow scroll views
Simon Fraser (smfr)
Reported
2014-06-30 14:38:14 PDT
[iOS WK2] Don't crash on status bar tap with overflow scroll views
Attachments
Patch
(2.31 KB, patch)
2014-06-30 14:39 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2014-06-30 14:39:25 PDT
Created
attachment 234096
[details]
Patch
WebKit Commit Bot
Comment 2
2014-06-30 15:59:01 PDT
Comment on
attachment 234096
[details]
Patch Clearing flags on attachment: 234096 Committed
r170610
: <
http://trac.webkit.org/changeset/170610
>
WebKit Commit Bot
Comment 3
2014-06-30 15:59:05 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug